--- a/gb/20/10/15/n12476972.md
+++ b/gb/20/10/15/n12476972.md
@@ -1,64 +1,54 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>复刻老时光竞赛  台中旧城邀外拍穿越剧</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/10/464261-600x400.jpg" />
 <h6>“复刻老时光－文化馆舍卡麦拉”活动，邀民众到具历史文化特色的台中刑务所演武场、台中市眷村文物馆与宫原武熊宅邸等三个文化馆舍拍照。（黄玉燕／大纪元）
 </h6>
 <hr>
-<p>【大纪元2020年10月15日讯】（大纪元记者黄玉燕台湾<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8F%B0%E4%B8%AD.md#1">台中</a>报导）台中市府文化局10月17日起推出“复刻老时光－文化馆舍卡麦拉”活动，邀民众到具历史文化特色的台中刑务所演武场、台中市眷村文物馆与宫原武熊宅邸等三个文化馆舍，仿佛来到复古装置摄影棚，穿上古装来一场<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A4%96%E6%8B%8D.md#1">外拍</a>穿越剧。精彩相片可上传至“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8F%B0%E4%B8%AD.md#1">台中</a>市博物馆与地方文化馆”专页，活动开放市民按赞票选后，前十名可获好礼。</p>
-<figure id="12476975" aria-describedby="caption-12476975" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/10/464262-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/10/464262-450x300.jpg" alt="“复刻老时光－文化馆舍卡麦拉”活动，邀民众到具历史文化特色的台中刑务所演武场、台中市眷村文物馆与宫原武熊宅邸等三个文化馆舍拍照。" width="500" /></a><figcaption id="caption-12476975" class="wp-caption-text">“复刻老时光－文化馆舍卡麦拉”活动，邀民众到具历史文化特色的台中刑务所演武场、台中市眷村文物馆与宫原武熊宅邸等三个文化馆舍拍照。（黄玉燕／大纪元）</figcaption></figure>
-<p>为提供民众活动概念与范本，市府文化局推出示范体验活动，由本市艺术亮点林照相馆进行拍摄；服装则依各个不同馆舍的建筑特色与过往流行风格，规划和服、西装或碎花小洋装。民众透过完整的发妆装扮、换装与<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A4%96%E6%8B%8D.md#1">外拍</a>形式，从现代社会穿越时空来到了<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%97%A7%E5%9F%8E.md#1">旧城</a>的风华年代。示范体验活动采网路方式10月15日18:00开始报名，名额有限、额满为止。</p>
-<p>活动串联的馆舍从台中<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%97%A7%E5%9F%8E.md#1">旧城</a>出发，有新六艺文化精神的台中刑务所演武场、结合外省与闽南文化精神的台中市眷村文物馆，与以长青不老为精神的宫原武熊宅邸等；参与示范体验的民众在现场可领取实体照片。</p>
+<p>【大纪元2020年10月15日讯】（大纪元记者黄玉燕台湾台中报导）台中市府文化局10月17日起推出“复刻老时光－文化馆舍卡麦拉”活动，邀民众到具历史文化特色的台中刑务所演武场、台中市眷村文物馆与宫原武熊宅邸等三个文化馆舍，仿佛来到复古装置摄影棚，穿上古装来一场外拍穿越剧。精彩相片可上传至“台中市博物馆与地方文化馆”专页，活动开放市民按赞票选后，前十名可获好礼。</p>
+<figure id="12476975" aria-describedby="caption-12476975" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/10/464262-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2020/10/464262-450x300.jpg" alt="“复刻老时光－文化馆舍卡麦拉”活动，邀民众到具历史文化特色的台中刑务所演武场、台中市眷村文物馆与宫原武熊宅邸等三个文化馆舍拍照。" width="500" /></a><figcaption id="caption-12476975" class="wp-caption-text">“复刻老时光－文化馆舍卡麦拉”活动，邀民众到具历史文化特色的台中刑务所演武场、台中市眷村文物馆与宫原武熊宅邸等三个文化馆舍拍照。（黄玉燕／大纪元）</figcaption></figure>
+<p>为提供民众活动概念与范本，市府文化局推出示范体验活动，由本市艺术亮点林照相馆进行拍摄；服装则依各个不同馆舍的建筑特色与过往流行风格，规划和服、西装或碎花小洋装。民众透过完整的发妆装扮、换装与外拍形式，从现代社会穿越时空来到了旧城的风华年代。示范体验活动采网路方式10月15日18:00开始报名，名额有限、额满为止。</p>
+<p>活动串联的馆舍从台中旧城出发，有新六艺文化精神的台中刑务所演武场、结合外省与闽南文化精神的台中市眷村文物馆，与以长青不老为精神的宫原武熊宅邸等；参与示范体验的民众在现场可领取实体照片。</p>
 <p>文化局表示，“复刻老时光-文化馆舍卡麦拉”拍照复刻活动，透过“写真/留影”等动作，拍下的不只是瞬间的美丽，更纪录了回忆；邀市民一起打开馆舍的前世今生，认识台中各式精彩馆舍，也为自己留下美好回忆。</p>
 <p>市民可在10月25日前到台中刑务所演武场、台中市眷村文物馆或宫原武熊宅邸拍摄属于自己的复古Look，邀大家一起推动台中复古流行潮。活动详情请上“台中市博物馆与地方文化馆”官方网站查询。◇</p>
 <p>责任编辑：李悦</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/15/10/5/n4543470.md#1">活化日治演武场    观光效益首夺金擘奖</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/8/7/n10621163.md#1">川川寻味炒蛋联合市集  展现台中旧城新能量</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/5/13/n11254579.md#1">东南亚掀游学热 越生走读台中品味旧城</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/5/20/n11268550.md#1">旧城区翻转中 台中推进绿空铁道三期工程</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/6/5/n11301939.md#1">“手作创生联盟”进驻 打造台中旧城新面貌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/4/15/n12032526.md#1">东海戏院都更案 活化台中旧城区具指标性</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/6/11/n12177543.md#1">翻转旧城区  台中绿空铁道年底完工</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056464.md#1">感受角落生活美学 台中再添9艺术亮点</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056488.md#1">上千学生“以工换技” 师徒制磨练工艺</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/17/n14055845.md#1">政府超征1.1兆税收  22建筑公会同声回馈青年</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/10/5/n4543470.md#1">活化日治演武场    观光效益首夺金擘奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/7/n10621163.md#1">川川寻味炒蛋联合市集  展现台中旧城新能量</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/13/n11254579.md#1">东南亚掀游学热 越生走读台中品味旧城</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/20/n11268550.md#1">旧城区翻转中 台中推进绿空铁道三期工程</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/19/6/5/n11301939.md#1">“手作创生联盟”进驻 打造台中旧城新面貌</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/4/15/n12032526.md#1">东海戏院都更案 活化台中旧城区具指标性</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/6/11/n12177543.md#1">翻转旧城区  台中绿空铁道年底完工</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347229.md#1">中市国庆亮点 重要路口上万罗马旗面飘扬</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347202.md#1">高铁站到高美湿地仅205元 台中首条共乘小黄上路</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347176.md#1">公车驾驶有A1纪录仍可执业 中市府：需中央修法</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/18/n10648920.md#1" target="_blank">俞心诚：凯撒之死</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/23/n11741117.md#1" target="_blank">中共侵犯宗教自由 美国宣布将持续追责</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/18/n10793353.md#1" target="_blank">林辉：金庸堂哥穆旦走到了幻想的尽头</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md#1" target="_blank">出版24年 42种语言 拥有全球读者的转法轮</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/11/n14052368.md#1">聊斋?山歌罗刹海市 隐喻之弹激起千层浪 马户又鸟知是谁？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/11/n14051960.md#1">【未解之谜】探秘中国第一神山</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/4/n14047740.md#1">【古道人生】皇帝因何震怒而将少年科甲的县令处决？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/13/n14053239.md#1">【未解之谜】震惊世界 悬空寺之谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/11/n14051916.md#1">媲美米开朗基罗《大卫》：巴洛克艺术家吉安?贝尼尼</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/17/n14056163.md#1">【新唐人快报】习近平食言 投资人信心瓦解</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/16/n14055317.md#1">【菁英论坛】经济屋漏逢夜雨 美防中共狗急跳墙</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/16/n14055097.md#1">【环球直击】西安查公民三代 分析：株连无底线</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/15/n14054550.md#1">央行顾问紧急呼吁救经济 专家：习无对策</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/15/n14054716.md#1">【新唐人快报】中国经济加速倒车 人民币跌不休</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/16/n14055055.md#1">违抗习指令 新疆兵团前副司令员焦小平被捕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/15/n14054567.md#1">陆男团粉丝游行效应 刘若英西安演唱会传喊停</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/15/n14054675.md#1">张国立公司被强制执行452万 邓婕动态引猜测</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/15/n14054531.md#1">专访港导演黄浩然：香港回来时 电影就会回来</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/15/n14054610.md#1">黄韵玲从回收桶捡回歌词 谱出赵传的经典名曲</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/16/n14055149.md#1">《芭比》“败坏道德”或“九段线”数国禁播</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/16/n14054952.md#1">苹果公司：睡觉时别在床上替iPhone充电</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/15/n14054228.md#1">上班假装很忙？ 全球调查：亚洲员工居多</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053377.md#1">沉迷手机好比嗜赌、嗑药？专家建议这样戒瘾</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/2/n14046620.md#1">逆转动脉粥样硬化的7种天然食物</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053975.md#1">奇异果令血管年轻21岁 防癌解便秘 3类人需慎吃</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344260.md#1">《清明上河图》化身乐高模型 打破世界纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341736.md#1">《千字文》——传世奇文，国学瑰宝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341684.md#1">贞观圣主（10）：指鸟为鸾 正诛佞人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/28/n14340380.md#1">人生如戏岂堪嗟 —— 评电影《进京城》</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/8/6/1/n2138665.md#1">善有善报，拖久了还付利息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346859.md#1">【时事金扫描】克宫出大事 乌军黑了俄国电视网</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346853.md#1">【财经非常道】美非农报告亮眼 降息降多了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343383.md#1">【全球新闻】超级飓风逼近佛州 百万人紧急撤离</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343180.md#1">三款SUV秋季或大幅涨价 含畅销车丰田RAV4</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14345122.md#1">红三代炫富：过生日奶奶给1.8亿 存款逾24亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345627.md#1">中国经济大萧条 大量实体店十一门庭冷落</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14346019.md#1">投资3亿 刘德华新片《危机航线》或亏2亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345927.md#1">那英澳门开唱遇冷 “十一”说成“五一”惹议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345357.md#1">韩剧《冬季恋歌》电影版 明年秋天在日本上映</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346417.md#1">《派遣女医X》以电影版落幕 米仓凉子感性落泪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346747.md#1">《狮子吼》“十一”档上映 2人观影 票房79元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14344945.md#1">这一物可以让水龙头闪闪发光 你可能想不到</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345615.md#1">如何去除家庭头号害虫——蟑螂？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/30/n14341564.md#1">苦瓜抗癌预防脂肪肝 一类人慎食</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/28/n14145199.md#1">长者自救锻炼法 逆转骨质疏松</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346990.md#1">越南餐厅推出“珍珠奶茶牛肉面” 是啥味道？</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/15/n12476972.htm">复刻老时光竞赛  台中旧城邀外拍穿越剧</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/20/10/15/n12476972.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/15/n12476972.htm">复刻老时光竞赛  台中旧城邀外拍穿越剧</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/20/10/15/n12476972.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
